--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -9,9 +9,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Run your project's build step
-      # - name: Build
-      #   run: npm install && npm run build
+
+      - name: Build
+        run: pnpm install && pnpm run build
+
       - name: Publish
         uses: cloudflare/pages-action@1
         with:
