--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -1,6 +1,8 @@
 on: [push]
 jobs:
   deploy:
+    env:
+      PROJ_ID: ${{ vars.PROJ_ID }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
