--- a/package.json
+++ b/package.json
@@ -12,21 +12,33 @@
     "pages:deploy": "astro build && wrangler pages deploy ./dist"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/cloudflare": "^8.0.1",
+    "@astrojs/check": "^0.5.8",
+    "@astrojs/cloudflare": "^9.1.0",
+    "@astrojs/react": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/inter": "^5.0.16",
-    "@iconify-json/mdi": "^1.1.63",
-    "@sanity/client": "^6.10.0",
+    "@fontsource-variable/inter": "^5.0.17",
+    "@iconify-json/mdi": "^1.1.64",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/client": "^6.15.4",
     "@sanity/image-url": "^1.0.2",
-    "astro": "^4.0.8",
-    "astro-icon": "^1.0.1",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.22",
+    "astro": "^4.5.2",
+    "astro-icon": "^1.1.0",
     "astro-portabletext": "^0.9.6",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.356.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "wrangler": "^3.22.1"
+    "wrangler": "^3.33.0"
   }
 }
