--- a/.github/workflows/greentea-deployment.yaml
+++ b/.github/workflows/greentea-deployment.yaml
@@ -42,6 +42,6 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: greentea # e.g. 'my-project'
+          projectName: gemtology # e.g. 'my-project'
           directory: dist # e.g. 'dist'
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
