Revert "switch to github actions to fix some weird issue"
This reverts commit 0a6a80cc1523682aa09bfd930a698ebaf987bbe2.

--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -2,7 +2,7 @@ on: [push]
 jobs:
   deploy:
     env:
-      PROJ_ID: ckvf1x81
+      PROJ_ID: ${{ vars.PROJ_ID }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
